tests/purs/failing/CoercibleForeign.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleForeign.purs:11:20 - 11:26 (line 11, column 20 - line 11, column 26)

  Could not match type
  [33m    [0m
  [33m  a0[0m
  [33m    [0m
  with type
  [33m       [0m
  [33m  Id a0[0m
  [33m       [0m

while solving type class constraint
[33m                                                 [0m
[33m  Prim.Coerce.Coercible (Foreign a0 b1)          [0m
[33m                        (Foreign (Id a0) (Id b1))[0m
[33m                                                 [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mForeign a0 b1 -> Foreign (Id a0) (Id b1)[0m
while checking that expression [33mcoerce[0m
  has type [33mForeign a0 b1 -> Foreign (Id a0) (Id b1)[0m
in value declaration [33mforeignToForeign[0m

where [33ma0[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)
      [33mb1[0m is a rigid type variable
        bound at (line 11, column 20 - line 11, column 26)

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

